fixed typo, added test.watch

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 /deps
 erl_crash.dump
 *.ez
+
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
